--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
   justify-content: flex-end;
   display: flex;
   padding: 1rem;
+  z-index: 2;
 
   &:hover {
     opacity: 1;
@@ -81,6 +82,7 @@
   display: flex;
   padding: 1rem;
   transition: all 0.2s ease-in-out;
+  z-index: 2;
 
   &:hover {
     opacity: 1;
@@ -104,10 +106,33 @@
   display: flex;
   padding: 1rem;
   transition: all 0.2s ease-in-out;
+  z-index: 2;
 
   &:hover {
     opacity: 1;
+  }
 
+  button {
+    height: fit-content;
+  }
+}
+
+.pic__bottom-controls {
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 1rem;
+  transition: all 0.2s ease-in-out;
+  z-index: 2;
+
+  &:hover {
+    opacity: 1;
   }
 
   button {
